# fastdbf

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  benchmark.py  fastdbf.pyi  pandas_bridge.py  pyproject.toml  test_dbf_pkg.py  test_header_comparison.py  test_roundtrip.py
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark.py
docs/: PYTHON_API.md
fastdbf/: __init__.py  __init__.pyi
scratch/: test_write_df.py
scripts/: test_dbf_pkg.py  test_header_comparison.py  test_roundtrip.py
src/: codepage.rs  error.rs  header.rs  lib.rs  memo.rs  python_api.rs  record.rs  spec.rs  table.rs  value.rs
tests/: test_dbf_compatibility.py  test_fastdbf.py  test_full_api.py  test_nan_handling.py
