[package]
name = "fastdbf"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Bruns"]
description = "Fast DBF reader/writer with Python bindings"
license = "Apache-2.0"

# cdylib  = Python extension (.so / .pyd)
# rlib    = allows `cargo test` to work
[lib]
name = "fastdbf"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
encoding_rs = "0.8"

[profile.release]
# Smaller binary, faster import
opt-level = 3
lto = true
codegen-units = 1
strip = true