[package]
name = "fastdbf"
version = "0.5.1"


edition = "2021"
authors = ["Jonas Bruns"]
description = "Fast DBF reader/writer with Python bindings"
license = "Apache-2.0"

# cdylib  = Python extension (.so / .pyd)
# rlib    = allows `cargo test` to work
[lib]
name = "fastdbf"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py311", "chrono"] }
encoding_rs = "0.8"
rayon = "1.10"
memmap2 = "0.9"
arrow = "54.0.0"
pyo3-arrow = "0.7.0"
chrono = "0.4"


[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
# Smaller binary, faster import
opt-level = 3
lto = true
codegen-units = 1
strip = true
