[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "fastdbf"
version = "0.1.0"
description = "A Python package for reading and writing DBF files, powered by a Rust core"
requires-python = ">=3.8"
readme = "README.md"
license = { text = "BSD-3-Clause" }
keywords = ["dbf", "dbase", "foxpro", "visual-foxpro", "rust", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pandas>=2.0",
  "maturin>=1.13.1",
]

[tool.maturin]
module-name = "fastdbf"
bindings = "pyo3"

[tool.uv]
default-groups = ["dev"]
