[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "fastdbf"
version = "0.4.2"
description = "A Python package for reading and writing DBF files, powered by a Rust core"
authors = [{ name = "Jonas Bruns" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["dbf", "dbase", "foxpro", "visual-foxpro", "rust", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pandas>=2.0",
  "maturin>=1.13.1",
  "matplotlib>=3.7.5",
  "dbf>=0.99.11",
  "seaborn>=0.13.2",
  "ruff>=0.15.12",
]

[tool.maturin]
module-name = "fastdbf"
bindings = "pyo3"

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
